--- a/mages/todo.txt
+++ b/mages/todo.txt
@@ -1,13 +1,5 @@
-- Unit Constructors
-- remove the team 2 & 3
-- Explosions
-- Was für sprites braucht es?
-    - gore
-    - explosions
-    - fire-weapon
-- spawn platoons based on command points
-- target chunks -> keep one platoon in a control-group
-  - ai control of platoons -> a platoon can get a mission
-    ai works by assigning platoons missions
-- load and unload in jeep, truck and armored transport
-- random ai moves on campaign map
+Vorgehen: 
+- Make the engine work nice and comment the code.
+- improve the battle handling: zoom, spawn, command points
+- Make the campaign work and streamline the gameplay
+- iterate on the battle-feeling
